--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,14 @@ body{
     text-align: center;
     padding-top: 20px;
 }
+
+canvas {
+    display:block;
+    background: rgb(33,36,50);
+    position: fixed;
+    z-index: -1;
+}
+
+#quotebox {
+  position: relative;
+}
